Remove calls to deprecated Java 21 methods